--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "start": "node index.js"
   },
+"repository": {
+  "type": "git",
+    "url": "git+https://github.com/lk901228/twitter-bot-luke"
+},
   "author": "Youssouf El AZIZI",
   "license": "ISC",
   "dependencies": {
